# Soroban-Cookbook-

./: .gitignore  404.html  AUDIT_CHECKLIST.md  CI_FIXES_SUMMARY.md  CODE_OF_CONDUCT.html  CODE_OF_CONDUCT.md  COMMUNITY_GUIDELINES.md  COMPLETION_CHECKLIST.md  CONTRIBUTING.html  CONTRIBUTING.md  CONTRIBUTORS.md  Cargo.toml  DOCS_SETUP.md  IMPLEMENTATION_SUMMARY.md  LICENSE  PROJECT_OVERVIEW.md  README.md  ROADMAP.md  SECURITY_AUDIT.md  TODO.md  TRIAGE.md  _typos.toml  community-guidelines.html  cspell.json  examples-index.html  index.html  issues.md  phase 8 issues.md  phase-8-update.md  print.html  rust  rust-toolchain.toml  searcher-09f2665d.js  searchindex-05dfc2c6.js  searchindex-091ee6c3.js  searchindex-1da269f5.js  searchindex-2b08302c.js  searchindex-599f08de.js  searchindex-74eb755b.js  searchindex-7d28de3d.js  (+23 more)
.cargo/: audit.toml  config.toml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.yml
.github/workflows/: README.md  ci.yml  dependabot-auto-merge.yml  deploy-docs.yml  fuzz.yml  security-audit.yml  test.yml
adr/: 001-record-architecture-decisions.html  index.html  template.html
api-reference/: index.html  rpc-methods.html  soroban-sdk.html
book/: book.toml
book/src/: README.md  SUMMARY.md  examples-index.md
book/src/deployment/: README.md  ci-cd-setup.md  configuration.md
book/src/docs/: README.md  benchmarks.md  best-practices.md  cross-contract-patterns.md  defi-development-video.md  documentation-platform-evaluation.md  nft-patterns.md  search.md  security-best-practices.md  wallet-ecosystem.md  wallet-integration.md
book/src/examples/: advanced.md  basics.md  defi.md  error-handling.md  governance.md  intermediate.md  nfts.md  oracle-pattern.md  pause-unpause.md  playground.md  tokens.md  video-tutorials.md
book/src/guides/: security-checklist.md  testing.md
contributing/: code-of-conduct.html  development-workflow.html  index.html
core-concepts/: index.html  smart-contracts.html  tokens.html  transactions.html
deployment/: ci-cd-setup.html  configuration.html  index.html
docs/: README.md  Stellar_Feature_Request.md  audit_report.md  benchmarks.html  benchmarks.md  best-practices.html  common-patterns.html  common-patterns.md  common-pitfalls.html  cross-contract-patterns.html  cross-contract-patterns.md  defi-best-practices.html  defi-development-video.html  documentation-platform-evaluation.html  glossary.html  nft-patterns.md  onboarding.md  quick-reference.html  recognition-system.md  search.html  security-best-practices.html  security-best-practices.md  storage-types.md  style-guide.html  testing-best-practices.html  testing-best-practices.md  testing-guide.md  token-development-video.html  token-patterns.md  troubleshooting.html  wallet-ecosystem.html  wallet-integration.html  wallet-integration.md
docs/feedback-system/: README.md
docs/feedback-system/actions/: tracking-template.md
docs/feedback-system/communication/: response-templates.md
docs/feedback-system/forms/: feedback-form-template.md
docs/feedback-system/reviews/: checklist.md
docs/feedback-system/surveys/: config.yml
docs/security/: fundamentals.md  internal-security-review-advanced.md
docs/security-audit/: README.md  audit-prep-checklist.md  audit-scope.md  bug-bounty.md  intermediate-patterns-security-checklist.md  known-issues-log.md
examples/: README.md  advanced.html  ajo-factory.html  basics.html  defi.html  error-handling.html  events.html  governance.html  intermediate.html  nfts.html  oracle-pattern.html  pause-unpause.html  playground.html  storage-patterns.html  tokens.html  vault-strategies.html
examples/advanced/: README.md
examples/advanced/02-beacon-proxy/: Cargo.toml
examples/advanced/02-beacon-proxy/src/: beacon.rs  implementation_v1.rs  implementation_v2.rs  lib.rs  proxy.rs  test.rs
examples/advanced/04-oracle-integration/: Cargo.toml  README.md
examples/advanced/04-oracle-integration/src/: lib.rs  test.rs
examples/advanced/05-diamond-security/: BEST_PRACTICES.md  Cargo.toml  README.md
examples/advanced/05-diamond-security/facet-adder/: Cargo.toml
examples/advanced/05-diamond-security/facet-adder/src/: lib.rs
examples/advanced/05-diamond-security/facet-multiplier/: Cargo.toml
examples/advanced/05-diamond-security/facet-multiplier/src/: lib.rs
examples/advanced/05-diamond-security/src/: lib.rs  test.rs
examples/basics/: README.md
examples/defi/: README.md
examples/defi/08-liquidity-mining/: Cargo.toml  README.md
examples/defi/08-liquidity-mining/src/: lib.rs  test.rs
examples/governance/: README.md
examples/nfts/: README.md
examples/tokens/: README.md
examples/tokens/05-vesting/: Cargo.toml  README.md
examples/tokens/05-vesting/src/: lib.rs  test.rs
frontend/: package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
getting-started/: index.html  installation.html  prerequisites.html  quick-start.html
guides/: README.md  contract-development.html  deployment.html  ethereum-to-soroban.html  freighter-wallet-integration.md  fuzz-testing.md  getting-started.html  index.html  introduction-video.html  local-simulation.html  macos-setup.html  testing.html  video-creation.html
scripts/: README.md  build.sh  ci-exclude-packages.txt  ci-workspace.sh  deploy.sh  generate-contributors.sh  lint.sh  test.sh
shared/src/: lib.rs
tests/fuzz/: Cargo.toml
tests/fuzz/fuzz_targets/: example_fuzz.rs
tests/integration/: Cargo.toml
tests/integration/test_snapshots/: test_authenticated_storage_workflow.1.json  test_coordinated_state_management.1.json  test_cross_contract_event_tracking.1.json  test_greeting_system_workflow.1.json  test_multi_party_workflow.1.json  test_storage_types_comparison.1.json
tests/integration/tests/: access_control_fuzz.rs  advanced_security_review.rs  defi_fuzz_tests.proptest-regressions  defi_fuzz_tests.rs  defi_scenarios.rs  fuzz_tests.rs  governance_tests.rs  integration_tests.rs
tests/security/: Cargo.toml
tests/security/tests/: security_tests.rs
troubleshooting/: common-issues.html  faq.html  index.html
webapp/: package.json
(+337 files in other folders)
