[package]
name = "integration-tests"
version = "0.1.0"
edition = "2021"
publish = false

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
soroban-validation = { path = "../../shared", package = "soroban-validation" }
hello_world = { path = "../../examples/basics/01-hello-world", package = "hello-world" }
storage_patterns = { path = "../../examples/basics/02-storage-patterns", package = "storage-patterns" }
authentication = { path = "../../examples/basics/03-authentication", package = "authentication" }
custom_errors = { path = "../../examples/basics/03-custom-errors", package = "custom-errors" }
events_structured = { path = "../../examples/basics/04-events", package = "events" }
validation_patterns = { path = "../../examples/basics/06-validation-patterns", package = "validation-patterns" }
ajo = { path = "../../examples/intermediate/ajo", package = "ajo" }
ajo_factory = { path = "../../examples/intermediate/ajo-factory", package = "ajo-factory" }
multi_sig_patterns = { path = "../../examples/intermediate/multi-sig-patterns", package = "multi-sig-patterns" }
multi_party_auth = { path = "../../examples/advanced/01-multi-party-auth", package = "multi-party-auth" }
timelock = { path = "../../examples/advanced/02-timelock", package = "timelock" }
token_wrapper = { path = "../../examples/tokens/token-wrapper", package = "token-wrapper" }
simple_voting = { path = "../../examples/governance/01-simple-voting", package = "simple-voting" }
