[package]
name = "integration-tests"
version = "0.1.0"
edition = "2021"
publish = false

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
soroban-validation = { path = "../../shared", package = "soroban-validation" }
hello_world = { path = "../../examples/basics/01-hello-world", package = "hello-world" }
storage_patterns = { path = "../../examples/basics/02-storage-patterns", package = "storage-patterns" }
authentication = { path = "../../examples/basics/03-authentication", package = "authentication" }
custom_errors = { path = "../../examples/basics/03-custom-errors", package = "custom-errors" }
events_structured = { path = "../../examples/basics/04-events", package = "events" }
validation_patterns = { path = "../../examples/basics/06-validation-patterns", package = "validation-patterns" }
ajo = { path = "../../examples/intermediate/ajo", package = "ajo" }
ajo_factory = { path = "../../examples/intermediate/ajo-factory", package = "ajo-factory" }
multi_sig_patterns = { path = "../../examples/intermediate/multi-sig-patterns", package = "multi-sig-patterns" }
multi_party_auth = { path = "../../examples/advanced/01-multi-party-auth", package = "multi-party-auth" }
timelock = { path = "../../examples/advanced/02-timelock", package = "timelock" }
token_wrapper = { path = "../../examples/tokens/token-wrapper", package = "token-wrapper" }
error_handling = { path = "../../examples/basics/05-error-handling", package = "soroban-error-handling-example" }
auth_context = { path = "../../examples/basics/05-auth-context", package = "auth-context" }
type_conversions = { path = "../../examples/basics/07-type-conversions", package = "type-conversions" }
soroban_types_example = { path = "../../examples/basics/08-soroban-types", package = "soroban_types_example" }
enum_types = { path = "../../examples/basics/09-enum-types", package = "enum-types" }
custom_structs = { path = "../../examples/basics/10-custom-structs", package = "custom-structs" }
primitive_types = { path = "../../examples/basics/11-primitive-types", package = "primitive-types" }
data_types = { path = "../../examples/basics/12-data-types", package = "data-types" }
collection_types = { path = "../../examples/basics/13-collection-types", package = "collection-types" }
basic_nft = { path = "../../examples/nfts/01-basic-nft", package = "basic-nft" }
nft_marketplace = { path = "../../examples/nfts/02-nft-marketplace", package = "nft-marketplace" }
proposal_lifecycle = { path = "../../examples/governance/04-proposal-lifecycle", package = "proposal-lifecycle" }
role_based_access_control = { path = "../../examples/intermediate/02-role-based-access-control", package = "role-based-access-control" }
rbac_modifiers = { path = "../../examples/advanced/03-rbac-modifiers", package = "rbac-modifiers" }
pause_unpause = { path = "../../examples/intermediate/03-pause-unpause", package = "pause-unpause" }
registry_access_controls = { path = "../../examples/advanced/03-registry-access-controls", package = "registry-access-controls" }
proxy_admin = { path = "../../examples/advanced/03-proxy-admin", package = "proxy-admin" }
simple_voting = { path = "../../examples/governance/01-simple-voting", package = "simple-voting" }
constant_product_amm = { path = "../../examples/defi/02-constant-product-amm", package = "constant-product-amm" }
lending_pool = { path = "../../examples/defi/03-lending-pool", package = "lending-pool" }
collateralized_lending = { path = "../../examples/defi/04-collateralized-lending", package = "collateralized-lending" }
proptest = "1.6"
voting_time_constraints = { path = "../../examples/governance/01-voting-time-constraints", package = "voting-time-constraints" }
oracle_pattern = { path = "../../examples/advanced/03-oracle-pattern", package = "oracle-pattern" }
cross_contract_integration_testing = { path = "../../examples/advanced/04-cross-contract-integration-testing", package = "cross_contract_integration_testing" }
upgradeable_proxy = { path = "../../examples/advanced/04-upgradeable-proxy", package = "upgradeable-proxy" }
contract_registry = { path = "../../examples/advanced/contract-registry", package = "contract-registry" }
simple_swap = { path = "../../examples/defi/01-simple-swap", package = "simple-token-swap" }
soroban_flash_loan = { path = "../../examples/defi/05-flash-loans", package = "soroban-flash-loan" }
liquidity_mining = { path = "../../examples/defi/08-liquidity-mining", package = "liquidity-mining" }
