[package]
name = "security-tests"
version = "0.1.0"
edition = "2021"
publish = false

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
token-wrapper = { path = "../../examples/tokens/token-wrapper" }
role-based-access-control = { path = "../../examples/intermediate/02-role-based-access-control" }
multi-sig-patterns = { path = "../../examples/intermediate/multi-sig-patterns" }
timelock = { path = "../../examples/advanced/02-timelock" }
