[package]
name = "oracle-integration"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
soroban-validation = { path = "../../../shared", features = ["testutils"] }

[profile.release]
opt-level = "z"
debug = 0
