[package]
name = "diamond-security"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
facet-adder = { path = "facet-adder" }
facet-multiplier = { path = "facet-multiplier" }
