[package]
name = "liquidity-mining"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { workspace = true, features = ["alloc", "testutils"] }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils", "alloc"] }
